fixed project card spacing

--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -4,6 +4,7 @@
 
 .custom-card {
     display: inline-block;
+    margin-bottom: 2rem;
 }
 
 /* Element Selectors
